--- a/HTML_Practice/basicTags1.html
+++ b/HTML_Practice/basicTags1.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Basic Tags 1</title>
   </head>
   <body>
+    //heading tags
     <h1>This is 1st code</h1>
   </body>
 </html>
