--- a/HTML_Practice/formattingTags.html
+++ b/HTML_Practice/formattingTags.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formatting Tags</title>
   </head>
-  <body></body>
+  <body>
+    <h2>hiii</h2>
+  </body>
 </html>
