--- a/Node_Practice/To-Do_List/public/index.html
+++ b/Node_Practice/To-Do_List/public/index.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>To-Do List</h1>
+    <section id="addTaskSec">
+      <h1>To-Do List</h1>
 
-    <form action="/tasks" method="POST">
-      <input type="text" name="text" placeholder="New task" required />
-      <button type="submit">Add Task</button>
-    </form>
-
-    <h2>Your Tasks</h2>
-    <ul id="task-list"></ul>
+      <form action="/tasks" method="POST">
+        <input type="text" name="text" placeholder="New Task" required />
+        <button type="submit">Add Task</button>
+      </form>
+    </section>
+    <hr />
+    <section id="viewTaskSec">
+      <h2>Your Tasks</h2>
+      <ul id="task-list"></ul>
+    </section>
 
     <script src="script.js"></script>
   </body>
