--- a/NodeWithTS_Practice/socialMediaApi/public/login.html
+++ b/NodeWithTS_Practice/socialMediaApi/public/login.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
+    <title>Login</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Register</h1>
-      <form id="registerForm">
+      <h1>Login</h1>
+      <form id="loginForm">
         <input type="email" id="email" placeholder="Email" required />
         <input type="password" id="password" placeholder="Password" required />
-        <button type="submit">Register</button>
+        <button type="submit">Login</button>
       </form>
-      <a href="login.html">Already have an account? Login here</a>
+      <a href="register.html">Don't have an account? Register here</a>
     </div>
     <script src="scripts.js"></script>
   </body>
