--- a/NodeWithTS_Practice/socialMediaApi/public/registration.html
+++ b/NodeWithTS_Practice/socialMediaApi/public/registration.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,19 +12,17 @@
     </header>
 
     <div class="form-container">
-      <h1>Login</h1>
-      <form id="login-form">
-        <input type="email" placeholder="Email" id="login-email" required />
+      <h1>Register</h1>
+      <form id="register-form">
+        <input type="email" placeholder="Email" id="register-email" required />
         <input
           type="password"
           placeholder="Password"
-          id="login-password"
+          id="register-password"
           required
         />
-        <button type="submit">Login</button>
-        <p>
-          Don't have an account? <a href="registration.html">Register here</a>
-        </p>
+        <button type="submit">Register</button>
+        <p>Already have an account? <a href="login.html">Login here</a></p>
       </form>
     </div>
 
